# CLI-Web-Scraper

./: README.md  pyproject.toml  scraper.py
